# eval-stack

./: .cspell.json  CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.changes/: async.md  clean.md  compile.md  config.json  config.toml  deps.md  engine.md  judge-line.md  lang.md  nodejs.md  runtime.md  serde.md
.github/workflows/: covector-version-or-publish.yml  semifold-ci.yaml  semifold-status.yaml
src/: case.rs  compile.rs  config.rs  exec.rs  judge.rs  lib.rs  main.rs  utils.rs
src/engine/: mod.rs  models.rs  runtime.rs
tests/: fail_to_write.mjs  fail_to_write.py  test.c  test.cpp  test.go  test.java  test.mjs  test.py  test.rs  test_fs.rs  test_judge.rs
