[package]
name = "eval-stack"
version = "0.1.2"
edition = "2021"
authors = ["苏向夜 <fu050409@163.com>"]
readme = "README.md"
license = "AGPL-3.0"
repository = "https://github.com/swpu-acm/eval-stack"
homepage = "https://github.com/swpu-acm/eval-stack"
description = "Extremely fast async online judge evaluation system for ACM/OI contests."
keywords = ["oj", "online-judge", "acm", "oi"]

[dependencies]
anyhow = "1.0.92"
libc = "0.2.161"
tokio = { version = "1.41.0", features = ["full"] }

nix = { version = "0.29.0", features = ["user"], optional = true }
serde = { version = "1.0.215", features = ["derive"], optional = true }

[features]
default = ["serde"]
rerun = ["nix"]
serde = ["dep:serde"]
