[package]
name = "eval-stack"
version = "0.3.3"
edition = "2021"
authors = ["苏向夜 <fu050409@163.com>"]
readme = "README.md"
license = "AGPL-3.0"
repository = "https://github.com/swpu-acm/eval-stack"
homepage = "https://github.com/swpu-acm/eval-stack"
description = "Extremely fast async online judge evaluation system for ACM/OI contests."
keywords = ["oj", "online-judge", "acm", "oi"]

[dependencies]
anyhow = "1.0.100"
libc = "0.2.177"
tokio = { version = "1.41.0", features = ["full"] }
seccompiler = "0.5.0"
which = "8.0.0"

serde = { version = "1.0.228", features = ["derive"], optional = true }
surrealdb = { version = "2.3.10", optional = true }
chrono = { version = "0.4.42", optional = true }
futures = { version = "0.3.31", optional = true }

[features]
default = ["engine"]
engine = ["surrealdb", "serde", "chrono", "futures"]
serde = ["dep:serde"]

[profile.release]
lto = "fat"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
panic = "abort"
codegen-units = 1
